Prevent layout shift

--- a/styles/headter.css
+++ b/styles/headter.css
@@ -49,6 +49,7 @@
 }
 body {
     font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
     margin: 0;
 }
 p, h1, h2, h3, ul, figure {
